調整token欄位
