# routes/posts.js
@@ -12,13 +12,9 @@ const {isAuth,generateSendJWT} = require('../service/auth');
 router.get('/',
     /* 	#swagger.tags = ['Post']
         #swagger.description = '取得所有貼文' */
-    /*  #swagger.parameters['authorization'] = {
-        in: 'header',
-        name: 'Authorization',
-        description: 'Access token required for authentication',
-        required: true,
-        type: 'string'
-    } */
+    /* #swagger.security = [{
+            "apiKeyAuth": []
+    }] */
     /* #swagger.parameters['timeSort'] = {
         in: 'query',
         description: '時間排序，asc 為遞增，desc 為遞減',
@@ -97,13 +93,9 @@ router.get('/',
 router.get('/:id',
     /* 	#swagger.tags = ['Post']
         #swagger.description = '取得單一貼文' */
-    /*  #swagger.parameters['authorization'] = {
-        in: 'header',
-        name: 'Authorization',
-        description: 'Access token required for authentication',
-        required: true,
-        type: 'string'
-    } */
+    /* #swagger.security = [{
+            "apiKeyAuth": []
+    }] */
     /* #swagger.parameters['id'] = {
         in: 'path',
         description: '貼文的ID',
@@ -176,13 +168,9 @@ router.get('/:id',
 router.post('/',
     /* 	#swagger.tags = ['Post']
         #swagger.description = '新增單筆貼文' */
-    /*  #swagger.parameters['authorization'] = {
-        in: 'header',
-        name: 'Authorization',
-        description: 'Access token required for authentication',
-        required: true,
-        type: 'string'
-    } */
+    /* #swagger.security = [{
+            "apiKeyAuth": []
+    }] */
     /*	#swagger.parameters['obj'] = {
           in: 'body',
           description: '新增貼文的資料',
@@ -415,13 +403,9 @@ router.patch('/post/:id',
 router.post('/:id/likes',
     /* 	#swagger.tags = ['Post']
         #swagger.description = '對貼文按讚' */
-    /*  #swagger.parameters['authorization'] = {
-        in: 'header',
-        name: 'Authorization',
-        description: 'Access token required for authentication',
-        required: true,
-        type: 'string'
-    } */
+    /* #swagger.security = [{
+            "apiKeyAuth": []
+    }] */
     /* #swagger.parameters['id'] = {
         in: 'path',
         description: '貼文的ID',
@@ -476,13 +460,9 @@ router.post('/:id/likes',
 router.delete('/:id/likes',
     /* 	#swagger.tags = ['Post']
         #swagger.description = '取消按讚' */
-    /*  #swagger.parameters['authorization'] = {
-        in: 'header',
-        name: 'Authorization',
-        description: 'Access token required for authentication',
-        required: true,
-        type: 'string'
-    } */
+    /* #swagger.security = [{
+            "apiKeyAuth": []
+    }] */
     /* #swagger.parameters['id'] = {
         in: 'path',
         description: '貼文的ID',
@@ -535,13 +515,9 @@ router.delete('/:id/likes',
 router.post('/:id/comment',
     /* 	#swagger.tags = ['Comment']
         #swagger.description = '新增留言' */
-    /*  #swagger.parameters['authorization'] = {
-        in: 'header',
-        name: 'Authorization',
-        description: 'Access token required for authentication',
-        required: true,
-        type: 'string'
-    } */
+    /* #swagger.security = [{
+            "apiKeyAuth": []
+    }] */
     /* #swagger.parameters['id'] = {
         in: 'path',
         description: '貼文的ID',
